# Blog_App_Kohta

./: .gitignore  README.md  SECURITY.md  SECURITY_NOTICE.md  SETUP.md  docker-compose.dev.yml  docker-compose.yml  env.example  package-lock.json  package.json
apps/backend/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  QUICKSTART.md  README.md  env.example
apps/backend-lambda/: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  README.md
apps/backend-lambda/scripts/: build-and-push.sh  test-api.sh  update-lambda.sh
apps/backend-lambda/src/: main.rs
apps/backend/archive/: README.md
apps/backend/archive/old-migrations/: 002_insert_initial_data.sql
apps/backend/docs/: SWAGGER.md  database-schema-v2.md  database-schema.md  getting-started.md  learning-roadmap.md  postico-setup.md  posts-api-implementation.md  rust-learning-path.md  sql-practice-guide.md  tutorial-01-locales.md
apps/backend/migrations/: 001_create_base_tables.sql  001_create_locales_table.sql  002_insert_locales_data.sql
apps/backend/src/: database.rs  main.rs
apps/backend/src/archive/old-code/domain/: mod.rs
apps/backend/src/archive/old-code/domain/entities/: post.rs
apps/backend/src/archive/old-code/repositories/: post_repository.rs
apps/backend/src/entities/: locale.rs  mod.rs
apps/backend/src/handlers/: greeting.rs  health.rs  locales.rs  mod.rs  posts.rs
apps/backend/src/models/: api_doc.rs  greeting.rs  health.rs  mod.rs  post.rs
apps/backend/src/repositories/: locale_repository.rs  mod.rs
apps/backend/src/routes/: mod.rs
(+147 files in other folders)
